crates/wac-parser/tests/resolution/fail/invalid-use.wac
package test:comp;

type x = u32;

interface a {
    use x.{a};
}